Changelog
=========

1.1.2 (unreleased)
------------------

- Add "Test Styles" button in control panel to expose, test_rendering template.
  [runyaga]

1.1.1 (2013-05-23)
------------------

- Fixed i18n issues.
  [thomasdesvenain]

- Fixed i18n issues.
  [jianaijun]

- This fixed UnicodeDecodeError when Theme Title is Non-ASCII
  in the manifest.cfg file.
  [jianaijun]


1.1 (2013-04-06)
----------------

- Fixed i18n issues.
  [vincentfretin]

- Make the template theme do what it claims to do: copy styles as
  well as scripts.
  [smcmahon]

- Change the label and description for the example theme to supply useful
  information.
  [smcmahon]

- Upgrades from 1.0 get the combined "Theming" control panel that was added in
  1.1a1.
  [danjacka]


1.1b2 (2013-01-01)
------------------

- Ensure host blacklist utilises SERVER_URL to correctly determine hostname
  for sites hosted as sub-folders at any depth.
  [davidjb]

- Add test about plone.app.theming / plone.app.caching integration when
  using GZIP compression for anonymous
  (see ticket `12038 <https://dev.plone.org/ticket/12038>`_). [ebrehault]


1.1b1 (2012-10-16)
------------------

- Add diazo.debug option, route all error_log output through
  this so debugging can be displayed
  [lentinj]

- Make example Bootstrap-based theme use the HTML5 DOCTYPE.
  [danjacka]

- Demote ZMI patch log message to debug level.
  [hannosch]

- Upgrade to ACE 1.0 via plone.resourceeditor
  [optilude]

- Put quotes around jQuery attribute selector values to appease
  jQuery 1.7.2.
  [danjacka]

1.1a2 (2012-08-30)
------------------

- Protect the control panel with a specific permission so it can be
  delegated.
  [davisagli]

- Advise defining ajax_load as ``request.form.get('ajax_load')`` in
  manifest.cfg.  For instance, the login_form has an hidden empty
  ajax_load input, which would give an unthemed page after submitting
  the form.
  [maurits]

- Change theme editor page templates to use main_template rather than