@@ -7,6 +7,11 @@ Changelog
 - Add "Test Styles" button in control panel to expose, test_rendering template.
   [runyaga]
 
+- (backport) #14107 bot requests like /widget/oauth_login/info.txt causes
+  problems finding correct context with plone.app.theming
+  [anthonygerrard]
+
+
 1.1.1 (2013-05-23)
 ------------------
 
